--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:background="@drawable/bg_toolbar"
     android:layout_gravity="center"
-    tools:context="com.example.MP3.MainActivity">
+    tools:context="com.example.mp3.MainActivity">
 
     <include layout="@layout/toolbar_title"/>
 
