--- a/app/src/main/res/layout/activity_qr_scanner.xml
+++ b/app/src/main/res/layout/activity_qr_scanner.xml
@@ -4,7 +4,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.mp3.QrScannerActivity">
+    tools:context="com.example.MP3.QrScannerActivity">
 
     <include layout="@layout/custom_barcode_scanner"/>
 
