--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,6 +8,8 @@
     <color name="lightBlack">#161619</color>
     <color name="grayish_black">#1B1B1E</color>
     <color name="transparent">#001B1B1E</color>
+    <color name="blue">#3DB7F1</color>
+    <color name="purple">#8D48ED</color>
 
 
 
