--- a/app/src/main/res/drawable/baseline_qr_code_24.xml
+++ b/app/src/main/res/drawable/baseline_qr_code_24.xml
@@ -1,4 +1,4 @@
-<vector android:height="44dp" android:tint="#FF2094"
+<vector android:height="44dp" android:tint="#3DB7F1"
     android:viewportHeight="24" android:viewportWidth="24"
     android:width="44dp" xmlns:android="http://schemas.android.com/apk/res/android">
     <path android:fillColor="@android:color/white" android:pathData="M3,11h8V3H3V11zM5,5h4v4H5V5z"/>
