--- a/app/src/main/res/drawable/bg_toolbar.xml
+++ b/app/src/main/res/drawable/bg_toolbar.xml
@@ -2,7 +2,7 @@
     <shape xmlns:android="http://schemas.android.com/apk/res/android"
         android:shape="rectangle">
         <gradient
-            android:startColor="@color/pink"
-            android:endColor="@color/white"
+            android:startColor="@color/purple"
+            android:endColor="@color/blue"
             android:angle="190" />
     </shape>
