--- a/app/src/main/res/layout/activity_add_value.xml
+++ b/app/src/main/res/layout/activity_add_value.xml
@@ -4,17 +4,16 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/bright_pink"
+    android:background="@drawable/bg_toolbar"
     tools:context="com.example.MP3.TransferActivity">
-    <include layout="@layout/toolbar_title"/>
 
         <TextView
             android:id="@+id/tv_add_amount"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textColor="@color/white"
-            android:text="@string/deposit_money"
-            android:fontFamily="@font/montserrat_regular"
+            android:textColor="@color/black"
+            android:text="@string/transfer_money"
+            android:fontFamily="@font/montserrat_bold"
             app:layout_constraintBottom_toTopOf="@id/cv_1"
             app:layout_constraintStart_toStartOf="parent"
             android:layout_marginStart="20dp"
@@ -43,7 +42,7 @@
             android:text="@string/enter_amount"
             android:layout_marginStart="30dp"
             android:layout_marginTop="10dp"
-            android:fontFamily="@font/montserrat_regular"/>
+            android:fontFamily="@font/montserrat_bold"/>
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
@@ -54,7 +53,7 @@
                 android:layout_width="330dp"
                 android:layout_height="100dp"
                 android:elevation="30dp"
-                android:backgroundTint="@color/dirty_white"
+                android:backgroundTint="@color/blue"
                 app:layout_constraintStart_toStartOf="parent"
                 app:cardCornerRadius="35dp"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -65,7 +64,6 @@
                     android:id="@+id/et_amount"
                     android:layout_width="280dp"
                     android:layout_height="80dp"
-                    android:hint="0.00"
                     android:inputType="number"
                     android:layout_gravity="center"
                     android:textAlignment="center"
@@ -82,9 +80,9 @@
         android:id="@+id/bttn_add_Value"
         android:layout_width="250dp"
         android:layout_height="50dp"
-        android:background="@drawable/bg_button_white"
-        android:text="@string/add_amount"
-        android:textColor="@color/white"
+        android:background="@color/blue"
+        android:text="@string/add"
+        android:textColor="@color/black"
         android:fontFamily="@font/montserrat_semibold"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
