--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -4,22 +4,10 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/pink"
+    android:background="@color/purple"
     tools:context="com.example.MP3.LoginActivity">
-    <TextView
-        android:id="@+id/tv_appName"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="@string/app_name"
-        android:textColor="@color/white"
-        android:gravity="center"
-        android:fontFamily="@font/pacifico_regular"
-        app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginTop="45dp"
-        android:textSize="40dp"/>
 
-
-    <androidx.cardview.widget.CardView
+    <LinearLayout
         android:id="@+id/cv_1"
         android:layout_width="match_parent"
         android:layout_height="750dp"
@@ -27,9 +15,9 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginTop="170dp"
+        android:layout_marginTop="10dp"
         app:cardCornerRadius="50dp"
-        android:backgroundTint="@color/lightBlack">
+        android:backgroundTint="@color/black">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -40,11 +28,11 @@
                 android:id="@+id/tv_welcome"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/welcome"
-                android:layout_marginStart="50dp"
+                android:text="@string/home"
+                android:layout_marginStart="30dp"
                 android:layout_marginTop="20dp"
                 android:textColor="@color/white"
-                android:fontFamily="@font/pacifico_regular"
+                android:fontFamily="@font/montserrat_bold"
                 android:textSize="40dp"/>
 
             <androidx.cardview.widget.CardView
@@ -54,7 +42,7 @@
                 android:layout_gravity="center"
                 app:cardCornerRadius="25dp"
                 android:layout_marginTop="40dp"
-                app:cardBackgroundColor="@color/grayish_black">
+                app:cardBackgroundColor="@color/black">
 
                 <TextView
                     android:id="@+id/tv_email"
@@ -85,7 +73,7 @@
                 android:layout_gravity="center"
                 app:cardCornerRadius="25dp"
                 android:layout_marginTop="20dp"
-                app:cardBackgroundColor="@color/grayish_black">
+                app:cardBackgroundColor="@color/black">
 
                 <TextView
                     android:id="@+id/tv_password"
@@ -115,10 +103,10 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="45dp"
                 android:layout_marginStart="110dp"
-                android:background="@drawable/bg_button"
+                android:background="@color/black"
                 android:text="@string/login"
                 android:textColor="@color/white"
-                android:fontFamily="@font/montserrat_regular"/>
+                android:fontFamily="@font/montserrat_bold"/>
 
             <TextView
                 android:id="@+id/tv_signup"
@@ -129,9 +117,9 @@
                 android:textStyle="italic"
                 android:text="@string/tv_sign_up"
                 android:textColor="@color/white"
-                android:textSize="15sp" />
+                android:textSize="18dp" />
 
         </LinearLayout>
-    </androidx.cardview.widget.CardView>
+    </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
