--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,9 +8,7 @@
     android:layout_gravity="center"
     tools:context="com.example.MP3.MainActivity">
 
-    <include layout="@layout/toolbar_title"/>
-
-    <androidx.cardview.widget.CardView
+    <LinearLayout
         android:id="@+id/cv_1"
         android:layout_width="370dp"
         android:layout_height="410dp"
@@ -42,7 +40,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/hello"
-                android:textColor="@color/lightBlack"
+                android:textColor="@color/white"
                 android:fontFamily="@font/montserrat_regular"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
@@ -72,7 +70,7 @@
                 android:layout_width="320dp"
                 android:layout_height="120dp"
                 android:layout_marginTop="102dp"
-                android:backgroundTint="@color/dirty_white"
+                android:backgroundTint="@color/blue"
                 app:cardCornerRadius="30dp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -87,7 +85,8 @@
                     android:fontFamily="@font/montserrat_semibold"
                     android:outlineProvider="bounds"
                     android:text="@string/php"
-                    android:textSize="42sp" />
+                    android:textSize="42sp"
+                    android:textColor="@color/white"/>
 
                 <TextView
                     android:id="@+id/tv_currentBalance"
@@ -106,8 +105,9 @@
                     android:layout_marginTop="85dp"
                     android:fontFamily="@font/montserrat_regular"
                     android:outlineProvider="bounds"
-                    android:text="@string/wallet_balance"
-                    android:textSize="15sp" />
+                    android:text="@string/balance"
+                    android:textSize="15sp"
+                    android:textColor="@color/white"/>
             </androidx.cardview.widget.CardView>
 
             <androidx.appcompat.widget.AppCompatImageButton
@@ -135,7 +135,7 @@
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
-    </androidx.cardview.widget.CardView>
+    </LinearLayout>
 
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/btn_logout"
@@ -144,8 +144,8 @@
         android:layout_gravity="center"
         android:layout_marginTop="70dp"
         android:text="@string/logout"
-        android:textColor="@color/pink"
-        android:fontFamily="@font/pacifico_regular"
+        android:textColor="@color/white"
+        android:fontFamily="@font/montserrat_semibold"
         android:textAllCaps="false"
         android:background="@drawable/bg_button"
         android:layout_marginBottom="50dp"
