--- a/app/src/main/res/layout/activity_qr.xml
+++ b/app/src/main/res/layout/activity_qr.xml
@@ -4,16 +4,15 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/bright_pink"
+    android:background="@drawable/bg_toolbar"
     tools:context="com.example.MP3.QrActivity">
 
-    <include layout="@layout/toolbar_title"/>
 
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/btn_done"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/done"
+        android:text="@string/back"
         android:background="@color/transparent"
         android:fontFamily="@font/montserrat_bold"
         android:textColor="@color/white"
@@ -22,7 +21,7 @@
         android:layout_marginTop="15dp"
         android:layout_marginStart="20dp"/>
 
-    <androidx.cardview.widget.CardView
+    <LinearLayout
         android:id="@+id/cv_1"
         android:layout_width="370dp"
         android:layout_height="500dp"
@@ -36,12 +35,14 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent">
 
-        <androidx.constraintlayout.widget.ConstraintLayout
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
             <ImageView
                 android:id="@+id/iv_qr"
+                android:layout_gravity="center"
+                android:paddingStart="5dp"
                 android:layout_width="320dp"
                 android:layout_height="320dp"
                 android:src="@drawable/ic_launcher_background"
@@ -49,37 +50,25 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintBottom_toBottomOf="parent"
-                android:layout_marginBottom="80dp"/>
-            <TextView
-                android:id="@+id/tv_appName"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="@string/app_name"
-                android:textColor="@color/bright_pink"
-                android:fontFamily="@font/pacifico_regular"
-                android:textSize="40sp"
-                android:gravity="center"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintBottom_toBottomOf="parent"
-                android:layout_marginBottom="40dp"/>
+                android:layout_marginBottom="60dp"
+                android:layout_marginLeft="20dp"/>
 
-        </androidx.constraintlayout.widget.ConstraintLayout>
-    </androidx.cardview.widget.CardView>
+        </LinearLayout>
+    </LinearLayout>
 
     <TextView
 
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/qr_message"
-        android:textColor="@color/white"
         android:fontFamily="@font/montserrat_bold"
-        android:textSize="27sp"
         android:gravity="center"
         android:paddingStart="20dp"
+        android:text="@string/qr_message"
+        android:textColor="@color/white"
+        android:textSize="29sp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/cv_1" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/cv_1" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
