--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -4,31 +4,19 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/pink"
+    android:background="@drawable/bg_toolbar"
     tools:context="com.example.MP3.SignupActivity">
 
-    <TextView
-        android:id="@+id/tv_appName"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="@string/app_name"
-        android:textColor="@color/white"
-        android:gravity="center"
-        app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginTop="45dp"
-        android:fontFamily="@font/pacifico_regular"
-        android:textSize="40dp"/>
 
-
-    <androidx.cardview.widget.CardView
+    <LinearLayout
         android:id="@+id/cv_1"
         android:layout_width="match_parent"
-        android:layout_height="750dp"
+        android:layout_height="550dp"
         android:elevation="50dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginTop="170dp"
+        android:layout_marginTop="5dp"
         app:cardCornerRadius="50dp"
         android:backgroundTint="@color/lightBlack">
 
@@ -42,10 +30,10 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/signup_message"
-                android:layout_marginStart="50dp"
+                android:layout_marginStart="30dp"
                 android:layout_marginTop="20dp"
-                android:textColor="@color/white"
-                android:fontFamily="@font/pacifico_regular"
+                android:textColor="@color/black"
+                android:fontFamily="@font/montserrat_bold"
                 android:textSize="40dp"/>
 
             <androidx.cardview.widget.CardView
@@ -55,7 +43,7 @@
                 android:layout_gravity="center"
                 app:cardCornerRadius="25dp"
                 android:layout_marginTop="20dp"
-                app:cardBackgroundColor="@color/grayish_black">
+                app:cardBackgroundColor="@color/blue">
 
                 <TextView
                     android:id="@+id/tv_name"
@@ -64,8 +52,8 @@
                     android:text="@string/name"
                     android:layout_marginStart="25dp"
                     android:layout_marginTop="15dp"
-                    android:fontFamily="@font/montserrat_regular"
-                    android:textColor="@color/white"
+                    android:fontFamily="@font/montserrat_semibold"
+                    android:textColor="@color/black"
                     android:textSize="16dp"/>
                 <EditText
                     android:id="@+id/et_name"
@@ -86,7 +74,7 @@
                 android:layout_gravity="center"
                 app:cardCornerRadius="25dp"
                 android:layout_marginTop="20dp"
-                app:cardBackgroundColor="@color/grayish_black">
+                app:cardBackgroundColor="@color/blue">
 
                 <TextView
                     android:id="@+id/tv_email"
@@ -95,8 +83,8 @@
                     android:text="@string/email"
                     android:layout_marginStart="25dp"
                     android:layout_marginTop="15dp"
-                    android:fontFamily="@font/montserrat_regular"
-                    android:textColor="@color/white"
+                    android:fontFamily="@font/montserrat_semibold"
+                    android:textColor="@color/black"
                     android:textSize="16dp"/>
 
                 <EditText
@@ -119,7 +107,7 @@
                 android:layout_gravity="center"
                 app:cardCornerRadius="25dp"
                 android:layout_marginTop="20dp"
-                app:cardBackgroundColor="@color/grayish_black">
+                app:cardBackgroundColor="@color/blue">
 
                 <TextView
                     android:id="@+id/tv_password"
@@ -128,8 +116,8 @@
                     android:text="@string/password"
                     android:layout_marginStart="25dp"
                     android:layout_marginTop="15dp"
-                    android:fontFamily="@font/montserrat_regular"
-                    android:textColor="@color/white"
+                    android:fontFamily="@font/montserrat_semibold"
+                    android:textColor="@color/black"
                     android:textSize="16dp"/>
 
                 <EditText
@@ -151,11 +139,10 @@
                 android:text="@string/sign_up"
                 android:layout_marginTop="30dp"
                 android:layout_marginStart="140dp"
-                android:textColor="@color/white"
-                android:fontFamily="@font/montserrat_regular"/>
-
+                android:textColor="@color/black"
+                android:fontFamily="@font/montserrat_semibold"/>
         </LinearLayout>
-    </androidx.cardview.widget.CardView>
+    </LinearLayout>
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
