--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -143,7 +143,7 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:layout_marginTop="70dp"
-        android:text="@string/logout"
+        android:text="Logout!"
         android:textColor="@color/white"
         android:fontFamily="@font/montserrat_semibold"
         android:textAllCaps="false"
